--- a/src/style/partials/gallery.scss
+++ b/src/style/partials/gallery.scss
@@ -22,7 +22,7 @@
 
 .gallery-item {
     margin: 0 20px vw(30);
-    width: calc(33.33333% - 40px});
+    width: calc(33.33333% - 40px);
 
     &__pic {
         position: relative;
